fixed button padding on iOS

--- a/math-for-kids/src/components/touchKeyboard/touchKey.module.scss
+++ b/math-for-kids/src/components/touchKeyboard/touchKey.module.scss
@@ -8,6 +8,7 @@
   background-color: $dark-color;
   border: none;
   border-radius: 0px;
+  padding: 0
 }
 
 @media (orientation: landscape) {
